@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.tvlux.sk"
-version="1.4.0"
+version="1.4.1"
 name="Televízia LUX"
 provider-name="VincoNafta">
 <requires>
