@@ -1,3 +1,5 @@
+[B]1.4.1[/B]
+- Fixed livestream
 [B]1.3.0[/B]
 - Added listing
 [B]1.2.0[/B]
